@@ -1,0 +1,24 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head></head><body>zlib/libpng license:
+
+This software is provided 'as-is', without any express or implied
+warranty. In no event will the authors be held liable for any damages
+arising from the use of this software.
+
+<br><br>Permission is granted to anyone to use this software for any purpose,
+including commercial applications, and to alter it and redistribute it
+freely, subject to the following restrictions:
+
+    <br><br><div style="margin-left: 40px;">1. The origin of this software must not be misrepresented; you must not
+    claim that you wrote the original software. If you use this software
+    in a product, an acknowledgment in the product documentation would be
+    appreciated but is not required.
+
+    <br><br>2. Altered source versions must be plainly marked as such, and must not be
+    misrepresented as being the original software.
+
+    <br><br>3. This notice may not be removed or altered from any source
+    distribution.
+
+
+</div></body></html>
