@@ -1,24 +1,11 @@
 #-----------------------------------------------------------------------------
-# Blender to Irrlicht Exporter
-# url: http://www.tubras.com
+# This source file is part of the Blender to Irrlicht Exporter (irrb)
+# url: http://code.google.com/p/tubras/wiki/irrb
 #
-# Copyright (C) 2008 Keith Murray -- <pc0de@tubras.com>
+# Copyright (C) 2008-2009 Keith Murray -- <pc0der at gmail dot com>
 #
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-#
-# this export script is assumed to be used with the latest blender version.
+# This software is licensed under the zlib/libpng license. See the file
+# "irrbmodules/docs/license.html" for detailed information.
 #-----------------------------------------------------------------------------
 # Notes:
 #
@@ -410,6 +397,10 @@ class Exporter:
                         self.iScene.writeNodeHead(self.sfile,self.gObjectLevel,'skyBox')
                         self.iScene.writeSkyBoxNodeData(self.sfile, bObject,
                                 sImages, self.gObjectLevel)
+                        if self.gSavePackedTextures:
+                            for image in sImages:
+                                if image.packed:
+                                    self._savePackedTexture(image)
                 elif itype.lower() == 'billboard':
                     bbImage = self._validateBillboard(bObject)
                     if bbImage == None:
@@ -418,6 +409,9 @@ class Exporter:
                         self.iScene.writeNodeHead(self.sfile,self.gObjectLevel,'billBoard')
                         self.iScene.writeBillboardNodeData(self.sfile, bObject,
                                 bbImage, self.gObjectLevel)
+                        if bbImage.packed and self.gSavePackedTextures:
+                            self._savePackedTexture(bbImage)
+
                 else:
                     # display invalid "inodetype" warning
                     writeTail = False
@@ -789,7 +783,6 @@ class Exporter:
                      self.gBaseDir)
         else:
             result = iUtils.relpath(fullFileName, self.gBaseDir)
-            print 'xyz', fullFileName, self.gBaseDir, result
                 
         result0 = result
 
